# iq_eq_test

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_eq_test_login_f_alter_iq_test_login_f.py  0003_alter_eq_test_login_f_alter_iq_test_login_f.py
core/templates/: base.html  eqtest.html  finish.html  index.html  iqtest.html
